# QMLTestApplication

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
modules/: CMakeLists.txt
modules/audio/: CMakeLists.txt
modules/audio/src/: audio.cpp  audio.h  audiobackend.cpp  audiobackend.h  audiochannel.cpp  audiochannel.h  audioerror.h  audiosettings.cpp  audiosettings.h
modules/theme/src/: theme.cpp  theme.h  themebackend.cpp  themebackend.h  themesettings.cpp  themesettings.h
ressources/: main.qml
src/: main.cpp
src/audiomodule/: CMakeLists.txt
src/audiomodule/src/: audio.cpp  audio.h  audiobackend.cpp  audiobackend.h  audiochannel.cpp  audiochannel.h
src/settingsmodule/: CMakeLists.txt
src/settingsmodule/src/: settings.cpp  settings.h  settingsbackend.cpp  settingsbackend.h
